--- a/assets/components/hybridauth/css/web/default.css
+++ b/assets/components/hybridauth/css/web/default.css
@@ -34,7 +34,7 @@
 .ha-icon.livejournal {background-position: -240px 0;}
 .ha-icon.mailru {background-position: -288px 0;}
 .ha-icon.odnoklassniki {background-position: -336px 0;}
-.ha-icon.thumblr {background-position: -384px 0;}
+.ha-icon.tumblr {background-position: -384px 0;}
 .ha-icon.twitter {background-position: -432px 0;}
 .ha-icon.vimeo {background-position: -480px 0;}
 .ha-icon.vkontakte {background-position: -528px 0;}
